--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 		<!-- Intro -->
 		<div id="intro">
 			<h1>Welcome! <br>I’m Leejin (Ian) Kim </h1>
-
+			<a href="#" class="main image"><img src="images/leejinkim.JPG" alt="" /></a>
 			<!-- <p>A free, fully responsive HTML5 + CSS3 site template designed by <a
 					href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a><br />
 				and released for free under the <a href="https://html5up.net/license">Creative Commons license</a>.</p> -->
@@ -66,14 +66,14 @@
 			<ul class="links">
 				<li class="active"><a href="index.html">Projects</a></li>
 				<li><a href="generic.html">Work Experience</a></li>
-				<li><a href="elements.html">Elements Reference</a></li>
+
 			</ul>
 			<ul class="icons">
 				<!-- a href="" data-rb-event-key="mailto:rladlwls17@gmail.com" -->
 				<li><a href="mailto:rladlwls17@gmail.com" class="icon fas fa-envelope"><span
 							class="label">Mail</span></a>
 				</li>
-				<li><a href="https://github.com/lkim3834" class="icon brands fa-github"><span
+				<li><a href="https://github.com/lkim3834" class=" icon brands fa-github"><span
 							class="label">GitHub</span></a>
 				</li>
 				<!-- <svg class="MuiSvgIcon-root" focusable="false" viewBox="0 0 24 24" aria-hidden="true" style="font-size: 21px;"></svg> -->
@@ -93,7 +93,7 @@
 					<p>Explore My Professional Journey</h1>
 					</p>
 				</header>
-				<a href="#" class="image main"><img src="images/IMG_7695.jpg" alt="" /></a>
+
 
 			</article>
 
@@ -104,7 +104,8 @@
 						<span class="date">Swift, Firestore, Git</span>
 						<h2>Athena app</h2>
 					</header>
-					<a href="#" class="image fit"><img src="images/Athena.png" alt="" /></a>
+					<a href="https://github.com/lkim3834/Athena" class="image fit"><img src="images/Athena.png"
+							alt="" /></a>
 					<p>• Created an iOS book-tracking app by implementing Swift, Firebase Firestore, and MVVM
 						architecture in an Agile. <br>
 						• Retrieved and updated backend data utilizing Firestore to enhance users’ reading progress
@@ -115,29 +116,15 @@
 						<li><a href="https://github.com/lkim3834/Athena" class="icon brands fa-github"></a></li>
 					</ul>
 				</article>
-				<article>
-					<header>
-						<span class="date">Angular, Typescript, HTML, SCSS, GitHub, Firebase</span>
-						<h2>Dynamic_survey</h2>
-					</header>
-					<a href="#" class="image fit"><img src="images/Dynamic_survey.png" alt="" /></a>
-					<p>• A data collection platform that provides qualitative and quantitative data through clusters
-						build on responses to open-ended questions.<br>
-						• Included UI components such as layout, icons, and popovers, leveraging HTML/CSS, Typescript,
-						and Figma.<br>
-						• Interacted with a Firebase efficiently, retrieving and modifying nine entities, to enable
-						users to create and edit surveys.<br></p>
-					<ul class="actions special">
-						<li><a href="https://github.com/lkim3834/survey" class="icon brands fa-github"></a></li>
-					</ul>
-				</article>
+
 				<article>
 					<header>
 						<span class="date">SQL, JavaScript, HTML/CSS, Git, Python, Docker</span>
 						<h2><a href="#">MeetupOrganizer<br />
 								interdum dolor</a></h2>
 					</header>
-					<a href="#" class="image fit"><img src="images/meetup_logo.png" alt="" /></a>
+					<a href="https://github.com/lkim3834/Meetup-Organizer-Website/tree/main" class="image fit"><img
+							src="images/meetup_logo.png" alt="" /></a>
 					<p>• Developed a full-stack MeetupOrganizer website, utilizing Rest API with .NET 7,C# , JavaScript,
 						and HTML/CSS.<br>
 						• Handled HTTP requests, including GET, PUT, and POST, and performed the required data
@@ -149,30 +136,12 @@
 						" class="icon brands fa-github"></a></li>
 					</ul>
 				</article>
-				<article>
-					<header>
-						<span class="date">Python, Pandas, Numpy</span>
-						<h2><a href="#">Data Mining on a Fish Dataset <br />
-								nulla imperdiet</a></h2>
-					</header>
-					<a href="#" class="image fit"><img src="images/data_mining.png" alt="" /></a>
-					<p>• Employed different variations of linear regression to predict fish weight based on species
-						type,
-						weight, etc. <br>
-						• Created a Pandas dataframe and employed Pandas functionality and sklearn to split the data
-						into
-						test and training datasets.<br>
-						• Identified outliers using mean and standard deviation from Numpy and dropped them from the
-						dataset using a 4 standard deviations cut-off<br></p>
-					<ul class="actions special">
-						<li><a href="https://colab.research.google.com/drive/10Rmqu31HVwzEh3TLVJgJzRrkJI_U3BEs#scrollTo=OrI7XG0qP0aW"
-								class="button">Collab Link</a></li>
-					</ul>
-				</article>
+
 				<article>
 					<header>
 						<span class="date">C, Linux, I/O, Git</span>
-						<h2><a href="#">CPU Scheduling Algorithms</a></h2>
+						<h2><a href="https://github.com/lkim3834/CPU-scheduling-algorithms">CPU Scheduling
+								Algorithms</a></h2>
 					</header>
 
 					<p>• Implemented a selection of CPU scheduling algorithms, including First-Come, First-Served (FCFS)
@@ -190,7 +159,9 @@
 				<article>
 					<header>
 						<span class="date">C++, Linux, IP, Git</span>
-						<h2><a href="#">Client/Server Application Using Sockets</a></h2>
+						<h2><a
+								href="https://github.com/lkim3834/object-oriented-techniques_using_Cpp/tree/main/asg4-client-server/code ">Client/Server
+								Application Using Sockets</a></h2>
 					</header>
 					<p>• stablished client-server communication in C++ by building 11 cxi_commands (such as GET, PUT,
 						RM, etc.).<br>
@@ -201,6 +172,44 @@
 					<ul class="actions special">
 						<li><a href=" https://github.com/lkim3834/object-oriented-techniques_using_Cpp/tree/main/asg4-client-server/code 
 							" class="icon brands fa-github"></a></li>
+					</ul>
+				</article>
+				<article>
+					<header>
+						<span class="date">Python, Pandas, Numpy</span>
+						<h2><a href="#">Data Mining on a Fish Dataset <br />
+								nulla imperdiet</a></h2>
+					</header>
+					<a href="https://colab.research.google.com/drive/10Rmqu31HVwzEh3TLVJgJzRrkJI_U3BEs#scrollTo=OrI7XG0qP0aW"
+						class="image fit"><img src="images/data_mining.png" alt="" /></a>
+					<p>• Employed different variations of linear regression to predict fish weight based on species
+						type,
+						weight, etc. <br>
+						• Created a Pandas dataframe and employed Pandas functionality and sklearn to split the data
+						into
+						test and training datasets.<br>
+						• Identified outliers using mean and standard deviation from Numpy and dropped them from the
+						dataset using a 4 standard deviations cut-off<br></p>
+					<ul class="actions special">
+						<li><a href="https://colab.research.google.com/drive/10Rmqu31HVwzEh3TLVJgJzRrkJI_U3BEs#scrollTo=OrI7XG0qP0aW"
+								class="button">Collab Link</a></li>
+					</ul>
+				</article>
+				<article>
+					<header>
+						<span class="date">Angular, Typescript, HTML, SCSS, GitHub, Firebase</span>
+						<h2>Dynamic_survey</h2>
+					</header>
+					<a href="https://github.com/lkim3834/survey" class="image fit"><img src="images/Dynamic_survey.png"
+							alt="" /></a>
+					<p>• A data collection platform that provides qualitative and quantitative data through clusters
+						build on responses to open-ended questions.<br>
+						• Included UI components such as layout, icons, and popovers, leveraging HTML/CSS, Typescript,
+						and Figma.<br>
+						• Interacted with a Firebase efficiently, retrieving and modifying nine entities, to enable
+						users to create and edit surveys.<br></p>
+					<ul class="actions special">
+						<li><a href="https://github.com/lkim3834/survey" class="icon brands fa-github"></a></li>
 					</ul>
 				</article>
 			</section>
