--- a/generic.html
+++ b/generic.html
@@ -31,7 +31,7 @@
 			<ul class="links">
 				<li><a href="index.html">Projects</a></li>
 				<li class="active"><a href="generic.html">Work Experience</a></li>
-				<li><a href="elements.html">Elements Reference</a></li>
+				<!-- <li><a href="elements.html">Elements Reference</a></li> -->
 			</ul>
 			<ul class="icons">
 				<!-- a href="" data-rb-event-key="mailto:rladlwls17@gmail.com" -->
