--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<li><a href="mailto:rladlwls17@gmail.com" class="icon fas fa-envelope"><span
 							class="label">Mail</span></a>
 				</li>
-				<li><a href="https://github.com/lkim3834" class=" icon brands fa-github"><span
+				<li><a href="https://github.com/lkim3834" class="icon brands fa-github"><span
 							class="label">GitHub</span></a>
 				</li>
 				<!-- <svg class="MuiSvgIcon-root" focusable="false" viewBox="0 0 24 24" aria-hidden="true" style="font-size: 21px;"></svg> -->
@@ -87,9 +87,12 @@
 
 			<!-- Featured Post -->
 			<article class="post featured">
+
 				<header class="major">
+
 					<span class="date">Oct 09, 2024</span>
 					<h2><a href="#">Projects</a></h2>
+					<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
 					<p>Explore My Professional Journey</h1>
 					</p>
 				</header>
