--- a/index.html
+++ b/index.html
@@ -92,8 +92,52 @@
 
 					<span class="date">Oct 09, 2024</span>
 					<h2><a href="#">Projects</a></h2>
-					<div class="image main"><img src="images/pic01.jpg" alt="" /></div>
 					<p>Explore My Professional Journey</h1>
+						<!-- <div class="image main"><img src="images/pic01.jpg" alt="" /></div> -->
+						<!-- section to view projects -->
+					<article class="review">
+						<a href="https://github.com/lkim3834/Athena" id="github" class="image fit reviewGit"><img
+								src="images/Athena.png" alt="" id="images" /></a>
+						<header>
+							<h4 id="author"> Athena app</h4>
+							<p id="job" class="date">Swift, Firestore, Git</p>
+							<!-- <span class="date">Swift, Firestore, Git</span>
+									<h2>Athena app</h2> -->
+						</header>
+
+						<!-- <div id="github">
+							<a id="link" href="https://github.com/heysaik/project-athena"
+								style="font-size: 30px;color : var(--clr-primary-3);">
+								<i class="fa-brands  fa-square-github"></i>
+							</a>
+						</div> -->
+						<a href="https://github.com/lkim3834/Athena" id="github"
+							class="icon brands fa-github reviewGit"></a>
+
+						<p id="info">
+							Created an iOS book-tracking app by implementing Swift, Firebase Firestore, and MVVM
+							architecture in an
+							Agile. <br>
+							Retrieved and updated backend data utilizing Firestore to enhance users’ reading progress
+							monitoring
+							experience.<br>
+							Served a user-friendly notes view, allowing users to create, search, and manage notes linked
+							to their
+							books.<br>
+						</p>
+						<!-- prev next buttons-->
+						<div class="button-container">
+							<button class="prev-btn">
+								<!-- indicate in italic style -->
+								<i class="fas fa-chevron-left"></i>
+							</button>
+							<button class="next-btn">
+								<i class="fas fa-chevron-right"></i>
+								<!-- <i>Italic</i> -->
+							</button>
+						</div>
+					</article>
+
 					</p>
 				</header>
 
@@ -306,7 +350,7 @@
 	<script src="assets/js/breakpoints.min.js"></script>
 	<script src="assets/js/util.js"></script>
 	<script src="assets/js/main.js"></script>
-
+	<script src="javascript/project.js"></script>
 </body>
 
 </html>
