--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 							</a>
 						</div> -->
 						<a href="https://github.com/lkim3834/Athena" id="github"
-							class="icon brands fa-github reviewGit"></a>
+							class="icon brands fa-github reviewGit link"></a>
 
 						<p id="info">
 							Created an iOS book-tracking app by implementing Swift, Firebase Firestore, and MVVM
